<resources>
    <string name="app_name">Digital House Foods</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="log_in">Log in</string>
    <string name="or">OR</string>
    <string name="register">Register</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_repeat_password">Repeat password</string>
    <string name="tony_romas">Tony Roma\'s</string>
    <string name="placeholder_address">Av. Lavandisca, 717 - Indianópolis, São Paulo</string>
    <string name="fecha_as">Fecha às</string>
    <string name="placeholder_horario">22:00</string>
    <string name="nome_app">Digital House Foods</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="placeholder_nome_prato">Salada com molho Gengibre</string>
    <string name="pratos_principais">Pratos principais</string>
    <string name="splash_screen">Splash Screen</string>
    <string name="pao_com_ovo">Pão com ovo</string>
</resources>