<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="310dp"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="5dp"
    android:background="@color/colorRestaurantes">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="305dp"
        android:layout_margin="5dp"
        app:cardCornerRadius="5dp">

        <LinearLayout
            android:id="@+id/llRestaurante"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivImgRestaurante"
                android:layout_width="match_parent"
                android:layout_height="210dp"
                android:scaleType="fitXY" />

            <TextView
                android:id="@+id/tvNomeRestaurante"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/tony_romas"
                android:textColor="@color/colorBlack"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvEnderecoRestaurante"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/placeholder_address"
                android:textColor="@color/colorGrey" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvFechaAs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fecha_as"
                    android:textColor="@color/colorGrey" />

                <TextView
                    android:id="@+id/tvHorarioQueFecha"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/placeholder_horario"
                    android:textColor="@color/colorGrey" />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>